Fix `blockquote` alignment on small screen

--- a/_core.scss
+++ b/_core.scss
@@ -116,6 +116,11 @@ blockquote {
     margin-top: $margin-mini;
   }
 
+  figure > &,
+  figure > & + figcaption {
+    text-align: left;
+  }
+
   @media (min-width: $breakpoint-full) {
     + figcaption {
       position: static;
